Fix overflow in vertical slides

--- a/public/custom-style.css
+++ b/public/custom-style.css
@@ -14,7 +14,6 @@ section {
     justify-content: center;
     align-items: center;
     padding: 5vmin 5vmin 5vmin 5vmin;
-    overflow: auto;
 }
 
 p {
